tests/src/frontend/typechecking/exhaustiveness/invalid/non_nested_string.sk
fun test(): String {
  "foo" match {
  | "bar" -> "Fail\n"
  | "baz" -> "Fail\n"
  }
}
